# linuxlite

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitlab_ci.yml  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SNAPSHOT  __init__.py  app.py  boot.sh  pyproject.toml  renovate.json  requirements.txt  sonar-project.properties
.github/: auto_assign.yml  dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql-analysis.yml  linter.yml
models/: __init__.py  base.py
static/js/: installer.js
templates/: index.html  misc.html  support.html
templates/error/: 400.html  401.html  403.html  404.html  405.html  500.html
tests/: testing_build.sh
util/: dev_build.sh  devbuild.sh  imagebuild.sh  local_build.sh  release_build.sh  testing_build.sh
