[tool.poetry]
name = "package-installer"
version = "0.4.0"
description = ""
authors = ["Alex <flowalex@vivaldi.net>"]
license = "MIT"
readme = "README.md"
packages = [{include = "package_installer"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
Flask-SQLAlchemy = "^3.0.3"
click = "8.0.3"
gunicorn = "20.1.0"
isort = "5.10.1"
itsdangerous = "2.0.1"
lazy-object-proxy = "1.7.1"
jinja2 = "3.0.3"
six = "1.16.0"
sqlalchemy = "1.4.29"
toml = "0.10.2"
typing-extensions = "4.0.1"
wrapt = "^1.15.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.1"
flakeheaven = "^3.2.1"
pylint = "^2.16.3"
mypy-extensions = "^1.0.0"
mccabe = "0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
